# M2F2_Det

./: .gitignore  M2F2_Det_Colab.ipynb  PLAN_AIGEN_FINETUNE.md  infer_single_image.py
3models_clean/aigi_detection/: README.md  pyproject.toml
3models_clean/aigi_detection/configs/: default.yaml
3models_clean/aigi_detection/datasets/: __init__.py  cifake_dataset.py  download_cifake.py
3models_clean/aigi_detection/evaluation/: __init__.py  compare.py  evaluate.py  robustness.py
3models_clean/aigi_detection/experiments/: __init__.py  run_all.py
3models_clean/aigi_detection/explainability/: __init__.py  consistency.py  maps.py  visualize.py
3models_clean/aigi_detection/models/: __init__.py
3models_clean/aigi_detection/models/aide/: __init__.py  aide_model.py  clip_expert.py  fusion.py  patch_expert.py
3models_clean/aigi_detection/models/cifake/: __init__.py  cnn.py  gradcam.py
3models_clean/aigi_detection/models/zed/: __init__.py  anomaly_maps.py  codec.py  detector.py
3models_clean/aigi_detection/results/aide/: training_metrics.csv
3models_clean/aigi_detection/results/cifake/: training_metrics.csv
3models_clean/aigi_detection/results/cifake/logs/cifake_cnn/: events.out.tfevents.1772571368.solana.23616.0  (+2 more)
3models_clean/aigi_detection/results/comparison/: results.csv  robustness.csv
3models_clean/aigi_detection/tests/: test_metrics.py  test_models.py  test_transforms.py
3models_clean/aigi_detection/training/: __init__.py  train_aide.py  train_cifake.py
3models_clean/aigi_detection/utils/: __init__.py  logging.py  metrics.py  seed.py  transforms.py
(+27 files in other folders)
